# docs/swagger.json
@@ -80,11 +80,52 @@
                     "Control"
                 ],
                 "operationId": "TriggerFingerprintMode",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/TriggerFingerprintModeRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/TriggerFingerprintModeResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/control/logs": {
+            "get": {
+                "tags": [
+                    "Control"
+                ],
+                "operationId": "GetAllLogs",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/GetAllLogsResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Control"
+                ],
+                "operationId": "DeleteAllLogs",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/DeleteAllLogsResponse"
                         }
                     }
                 }
@@ -112,6 +153,17 @@
                     "Control"
                 ],
                 "operationId": "TriggerRFIDMode",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/TriggerRFIDModeRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -126,6 +178,9 @@
     "definitions": {
         "ChangePinRequest": {
             "type": "object",
+            "required": [
+                "new_pin"
+            ],
             "properties": {
                 "new_pin": {
                     "type": "string"
@@ -134,22 +189,67 @@
         },
         "ChangePinResponse": {
             "type": "object",
+            "required": [
+                "message"
+            ],
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "DeleteAllLogsResponse": {
+            "type": "object",
+            "required": [
+                "message"
+            ],
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "GetAllLogsResponse": {
+            "type": "object",
+            "required": [
+                "logs"
+            ],
+            "properties": {
+                "logs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domains.Log"
+                    }
                 }
             }
         },
         "TriggerBuzzerAlarmResponse": {
             "type": "object",
+            "required": [
+                "message"
+            ],
             "properties": {
                 "message": {
                     "type": "string"
                 }
             }
         },
+        "TriggerFingerprintModeRequest": {
+            "type": "object",
+            "required": [
+                "slot"
+            ],
+            "properties": {
+                "slot": {
+                    "type": "integer"
+                }
+            }
+        },
         "TriggerFingerprintModeResponse": {
             "type": "object",
+            "required": [
+                "message"
+            ],
             "properties": {
                 "message": {
                     "type": "string"
@@ -158,14 +258,31 @@
         },
         "TriggerOpenDoorResponse": {
             "type": "object",
+            "required": [
+                "message"
+            ],
             "properties": {
                 "message": {
                     "type": "string"
                 }
             }
         },
+        "TriggerRFIDModeRequest": {
+            "type": "object",
+            "required": [
+                "slot"
+            ],
+            "properties": {
+                "slot": {
+                    "type": "integer"
+                }
+            }
+        },
         "TriggerRFIDModeResponse": {
             "type": "object",
+            "required": [
+                "message"
+            ],
             "properties": {
                 "message": {
                     "type": "string"
@@ -174,6 +291,9 @@
         },
         "ValidatePinRequest": {
             "type": "object",
+            "required": [
+                "pin"
+            ],
             "properties": {
                 "pin": {
                     "type": "string"
@@ -182,9 +302,31 @@
         },
         "ValidatePinResponse": {
             "type": "object",
+            "required": [
+                "message"
+            ],
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "domains.Log": {
+            "type": "object",
+            "required": [
+                "device_name",
+                "id",
+                "status"
+            ],
+            "properties": {
+                "device_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "boolean"
                 }
             }
         }
