# features/control/dto/requests/control.go
@@ -1,0 +1,9 @@
+package requests
+
+type TriggerFingerprintModeRequest struct {
+	Slot int `json:"slot"`
+} // @name TriggerFingerprintModeRequest
+
+type TriggerRFIDModeRequest struct {
+	Slot int `json:"slot"`
+} // @name TriggerRFIDModeRequest
